# task_manager_with_tests

./: .gitignore  pyproject.toml  task-manager.spec
.github/workflows/: ci-cd.yml
src/task_manager/: database.py  main.py
tests/: test_task_manager.py
